[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'sbb-oai-status'
version = '0.0.0'
dependencies = [
  'delb[https-loader]'
]
requires-python = '>=3.9.0'


[project.optional-dependencies]
dev = [
  'pytest-cov',
  'flake8-multiline-containers',
  'flake8-pyproject',
  'flake8-simplify',
]

[tool.setuptools]
packages = [
  'oai_status'
]

[project.scripts]
oai-status = 'oai_status:main'
oai-list-records = 'oai_status.list_records:main'


[tool.pytest.ini_options]
addopts = '''
  --doctest-modules --cov-report=term-missing --cov=oai_status/
'''


[tool.coverage.report]
fail_under = 96
precision = 2


[tool.flake8]
max-line-length = 100
exclude = [
  'build', '.venv'
]
