[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'sbb-oai-status'
version = '0.0.2'
dependencies = [
  'delb[https-loader]==0.5.1',
]
requires-python = '>=3.11.0'


[project.optional-dependencies]
dev = [
  'pytest-cov==7.0.0',
  'flake8-multiline-containers==0.0.19',
  'flake8-pyproject==1.2.4',
  'flake8-simplify==0.30.0; python_version<"3.14"',
]

[tool.setuptools]
packages = [
  'oai_status'
]

[project.scripts]
oai-status = 'oai_status:main'
oai-list-records = 'oai_status.list_records:main'


[tool.pytest.ini_options]
addopts = '''
  --doctest-modules --cov-report=term-missing --cov=oai_status/
'''


[tool.coverage.report]
fail_under = 96
precision = 2


[tool.flake8]
max-line-length = 100
exclude = [
  'build', '.venv'
]
